infra/controllers/general/base/egress/proxy-engine/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-svc
  namespace: egress-system
  labels:
    app: proxy-engine
spec:
  ports:
  - port: 7890
    name: mixed-proxy
    appProtocol: tcp
    protocol: TCP
    targetPort: 7890
  - port: 8891
    name: public-http
    appProtocol: tcp
    protocol: TCP
    targetPort: 8891
  - port: 8892
    name: public-v4
    appProtocol: tcp
    protocol: TCP
    targetPort: 8892
  - port: 8893
    name: public-v6
    appProtocol: tcp
    protocol: TCP
    targetPort: 8893
  - port: 9090
    name: clash-api
    appProtocol: http
    protocol: TCP
    targetPort: 9090
  selector:
    app: proxy-engine
