infra/controllers/general/base/egress/proxy-engine/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-engine-dashboard
  namespace: egress-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    namespace: prod
  hostnames:
  - proxy-engine.isning.moe
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: proxy-dashboard
      port: 8080
