infra/controllers/general/base/egress/proxy-engine/authz-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-engine-dashboard-ext-auth
  namespace: prod
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        hosts:
        - proxy-engine.isning.moe
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-engine-dashboard-deny-non-admin
  namespace: prod
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
  action: DENY
  rules:
  - to:
    - operation:
        hosts:
        - proxy-engine.isning.moe
    when:
    - key: request.auth.claims[roles]
      notValues:
      - proxy-engine:admin
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-webui-direct-access
  namespace: egress-system
spec:
  selector:
    matchLabels:
      app: proxy-dashboard
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/prod/sa/default-gateway-istio
        - cluster.local/ns/egress-system/sa/waypoint
    to:
    - operation:
        ports:
        - '8080'
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-webui-service-access
  namespace: egress-system
spec:
  targetRefs:
  - group: ''
    kind: Service
    name: proxy-dashboard
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/prod/sa/default-gateway-istio
    to:
    - operation:
        ports:
        - '8080'
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: proxy-dashboard-mtls
  namespace: egress-system
spec:
  selector:
    matchLabels:
      app: proxy-dashboard
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: proxy-engine-mtls
  namespace: egress-system
spec:
  selector:
    matchLabels:
      app: proxy-engine
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    '9090':
      mode: STRICT
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-engine-access
  namespace: egress-system
spec:
  selector:
    matchLabels:
      app: proxy-engine
  action: ALLOW
  rules:
  - to:
    - operation:
        ports:
        - '7890'
        - '8891'
        - '8892'
        - '8893'
  - from:
    - source:
        principals:
        - cluster.local/ns/egress-system/sa/proxy-dashboard
    to:
    - operation:
        ports:
        - '9090'
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-engine-api-service-access
  namespace: egress-system
spec:
  targetRefs:
  - group: ''
    kind: Service
    name: proxy-engine-headless
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/egress-system/sa/proxy-dashboard
    to:
    - operation:
        ports:
        - '9090'
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: proxy-service-access
  namespace: egress-system
spec:
  targetRefs:
  - group: ''
    kind: Service
    name: proxy-svc
  action: ALLOW
  rules:
  - to:
    - operation:
        ports:
        - '7890'
        - '8891'
        - '8892'
        - '8893'
